--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <!-- sidebar -->
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}">
